Atualizado: aulas 05 e 08. Adicionado: aula 12 (incompleto).

--- a/Aula_05.ipynb
+++ b/Aula_05.ipynb
@@ -377,7 +377,7 @@
     "- **String:** é como são chamados textos pequenos, de até 255 caracteres. Geralmente são representados por palavras simples, compostas, frases, no máximo um parágrafo. Sempre estão dentro de aspas, sejam elas simples ou duplas.\n",
     "- **Int:** são os números inteiros. Nunca são colocados dentro de aspas, e são representados apenas por números, nada mais. Nem vírgula, nem ponto, nem nenhum outro tipo de caractere.\n",
     "- **Pontos flutuantes:** são os números decimais. São chamados assim pois os valores que os representam estão \"flutuando\" entre um valor e outro. As suas casas decimais são **SEMPRE** separados por pontos, e nunca por vírgulas.\n",
-    "- **Valores booleanos:** são valores binários de **VERDADEIRO** ou **FALSO**. Uma variável desse tipo sempre vai receber um valor ou outro.\n",
+    "- **Valores booleanos:** são valores binários de **VERDADEIRO** (`True`) ou **FALSO** (`False`), sempre com a inicial maiúscula. Uma variável desse tipo sempre vai receber um valor ou outro.\n",
     "\n",
     "#### Atribuições de valores\n",
     "\n",
