--- a/Aula_08.ipynb
+++ b/Aula_08.ipynb
@@ -73,6 +73,198 @@
     "\n",
     "Assim como os blocos das estruturas de decisão, o while começa e termina onde o código estiver **indentado**. Portanto, nunca se esqueça de indentar corretamente seu código, já que toda a parte do código indentada fará parte do loop.\n",
     "\n",
+    "### Continue\n",
+    "\n",
+    "O comando `continue` serve para que a execução do restante do bloco seja desconsiderada e o código ignorado. O loop terá sua contagem contabilizada e o programa retorna para o início do loop. Segue o exemplo abaixo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "Contando...\n",
+      "4\n",
+      "Contando...\n",
+      "6\n",
+      "Contando...\n",
+      "8\n",
+      "Contando...\n",
+      "10\n",
+      "Contando...\n"
+     ]
+    }
+   ],
+   "source": [
+    "cont = 0\n",
+    "\n",
+    "while cont < 10:\n",
+    "    cont += 1\n",
+    "    if cont % 2 == 0:\n",
+    "        print(cont)\n",
+    "    else:\n",
+    "        continue\n",
+    "\n",
+    "    print('Contando...')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Break\n",
+    "\n",
+    "O comando `break` faz o contrário: encerra imediatamente o loop e vai para o final do programa, sem terminar o loop, mesmo que a condição esteja sendo atendida:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "Contando...\n",
+      "4\n",
+      "Contando...\n",
+      "6\n",
+      "Contando...\n"
+     ]
+    }
+   ],
+   "source": [
+    "cont = 0\n",
+    "\n",
+    "while cont < 15:\n",
+    "    cont += 1\n",
+    "    if cont % 2 == 0:\n",
+    "        print(cont)\n",
+    "    elif cont >= 7:\n",
+    "        break\n",
+    "    else:\n",
+    "        continue\n",
+    "\n",
+    "    print('Contando...')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pass\n",
+    "\n",
+    "O comando `pass` é utilizado para o programa simplesmente pular uma determinada opção. Pode ser substituído por `...`. Veja o exemplo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Contando...\n",
+      "2\n",
+      "Contando...\n",
+      "Contando...\n",
+      "4\n",
+      "Contando...\n",
+      "6\n",
+      "Contando...\n",
+      "8\n",
+      "Contando...\n",
+      "10\n",
+      "Contando...\n",
+      "12\n",
+      "Contando...\n",
+      "14\n",
+      "Contando...\n"
+     ]
+    }
+   ],
+   "source": [
+    "cont = 0\n",
+    "\n",
+    "while cont < 20:\n",
+    "    cont += 1\n",
+    "    if cont % 2 == 0:\n",
+    "        print(cont)\n",
+    "    elif cont < 5:\n",
+    "        pass\n",
+    "    elif cont >= 15:\n",
+    "        break\n",
+    "    else:\n",
+    "        continue\n",
+    "\n",
+    "    print('Contando...')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Agora o mesmo exemplo, só que com `...` no lugar do `pass`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Contando...\n",
+      "2\n",
+      "Contando...\n",
+      "Contando...\n",
+      "4\n",
+      "Contando...\n",
+      "6\n",
+      "Contando...\n",
+      "8\n",
+      "Contando...\n",
+      "10\n",
+      "Contando...\n",
+      "12\n",
+      "Contando...\n",
+      "14\n",
+      "Contando...\n"
+     ]
+    }
+   ],
+   "source": [
+    "cont = 0\n",
+    "\n",
+    "while cont < 20:\n",
+    "    cont += 1\n",
+    "    if cont % 2 == 0:\n",
+    "        print(cont)\n",
+    "    elif cont < 5:\n",
+    "        ...\n",
+    "    elif cont >= 15:\n",
+    "        break\n",
+    "    else:\n",
+    "        continue\n",
+    "\n",
+    "    print('Contando...')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Laço while True\n",
     "\n",
     "Agora uma surpresa que poderá deixar os programadores das outras linguagens  chocados: **O PYTHON NÃO POSSUI O LAÇO `DO...WHILE`**. É isso mesmo: não se faz o `do...while` no Python. No lugar dele, o mesmo `while` é usado em conjunto com um valor booleano para executar um loop infinito, ou até que ocorra uma quebra no loop, como iremos aprender a seguir. Vamos retornar a um exemplo feito nas aulas anteriores para fins de demonstração: retornaremos ao algoritmo da verificação da idade, e refazê-lo para que o usuário decida quando encerrar o programa:"
