--- a/Aula_02.ipynb
+++ b/Aula_02.ipynb
@@ -104,9 +104,7 @@
     "\n",
     "Segue abaixo um vídeo do youtube explicando rapidamente como funciona a teoria:\n",
     "\n",
-    "Link do vídeo: https://youtu.be/1_h76lh1wzE?si=3dzrqrC5MhLj5P7n\n",
-    "\n",
-    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/1_h76lh1wzE?si=MDD74Xjm0o7QD1lI\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>"
+    "Link do vídeo: https://youtu.be/1_h76lh1wzE?si=3dzrqrC5MhLj5P7n"
    ]
   },
   {
