Adicionados: Aula 13 e arquivo funcoes.py. Atualizados: Aula 02 e 12.

--- a/Aula_12.ipynb
+++ b/Aula_12.ipynb
@@ -361,7 +361,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Há uma forma de se escrever funções de forma simplificada. Quando as funções são curtas (geralmente apenas com o retorno), você pode trocar por um ***lambda***, que nada mais são do que funções sem nome, que já são atribuidas de forma direta às variáveis. Veja o exemplo abaixo:"
+    "Há uma forma de se escrever funções de forma simplificada. Quando as funções são curtas (geralmente apenas com o retorno), você pode trocar por um ***lambda***, que nada mais são do que funções sem nome, que já são atribuidas de forma direta às variáveis. Veja o exemplo abaixo. Ele representa um algoritmo com uma função normal:"
    ]
   },
   {
