--- a/Aula_05.ipynb
+++ b/Aula_05.ipynb
@@ -201,7 +201,7 @@
     "Este é um exemplo\n",
     "de um comentário\n",
     "de múltiplas linhas\n",
-    "com aspas simples\n",
+    "com aspas duplas\n",
     "\"\"\""
    ]
   },
