--- a/Aula_13.ipynb
+++ b/Aula_13.ipynb
@@ -369,6 +369,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## O if name main do Python\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Quando temos um projeto com mais de um arquivo **.py**, é comum que o arquivo que contenha o código principal (geralmente é o arquivo chamado **main.py**) contenha uma estrutura iniciando com o seguinte comando: `if __name__ == '__main__:'`. É dentro dessa estrutura que está o algoritmo principal, que irá chamar as funções e exibir o resultado na tela. Essa estrutura existe para evitar que um outro arquivo importe essa estrutura para dentro dele. Ou seja, o `if __name__ == '__main__':` só vai ser executado quando você executar o código diretamente.\n",
+    "\n",
+    "Não é algo complicado, é só você pensar na própria estrutura do If no Python, quando você executa um arquivo diretamente dentro dele essa variável name vai receber o valor main, caso contrário não recebe esse valor. Então quando for fazer a comparação dentro do If, se estiver rodando o código principal essa verificação é verdadeira e ele executa o conteúdo, caso contrário a verificação é falsa e o código é ignorado. Pense assim, o código que possui essa estrutura if name main está sendo executado à partir dele mesmo? Se sim, vamos executar o conteúdo dessa estrutura.Caso contrário ele estará sendo executado a partir de outro código, portanto a estrutura if name main não será executada. Veja no exemplo abaixo. Digamos que ele é um arquivo chamado **main.py**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Área do retângulo: 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "# função\n",
+    "def calcular_retangulo(b, a):\n",
+    "    retangulo = b * a\n",
+    "    return retangulo\n",
+    "\n",
+    "# algoritmo principal\n",
+    "if __name__ == \"__main__\":\n",
+    "    b = int(input('Informe o valor da base do retângulo: '))\n",
+    "    a = int(input('Informe o valor da altura do retângulo: '))\n",
+    "\n",
+    "    print(f'Área do retângulo: {calcular_retangulo(b, a)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Obs:** o ideal é sempre colocar essa estrutura no seu código-fonte principal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Importação de pacotes externos\n",
     "---"
    ]
