Adicionado: README.md. Atualizado: Aula 13.

--- a/Aula_13.ipynb
+++ b/Aula_13.ipynb
@@ -413,6 +413,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Dessa forma, se eu for importar o arquivo **main.py** para outro arquivo, ele irá importar `calcular_retangulo`, mas não conseguirá importar o que está dentro de `if __name__ == '__main__':`.\n",
+    "\n",
     "**Obs:** o ideal é sempre colocar essa estrutura no seu código-fonte principal."
    ]
   },
