--- a/Aula_13.ipynb
+++ b/Aula_13.ipynb
@@ -422,6 +422,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Como funciona?\n",
+    "\n",
+    "Ao rodar qualquer arquivo em Python ele automaticamente, antes de tudo, define a variável __name__, que é uma variável reservada do Python. Então quando fazemos uma execução direta, executando o próprio arquivo, ele atribui o valor “__main__” para essa variável. Isso quer dizer que, estamos executando o arquivo de forma direta, ou seja, abrimos o arquivo e estamos executando ele. Dessa forma a variável __name__ recebe o valor __main__. No entanto, quando importamos esse arquivos e executamos através de um segundo arquivo, essa variável recebe outra informação.\n",
+    "\n",
+    "Então ao fazer a comparação de __name__ = “__main__” ela será falsa e, portanto, não vai executar o conteúdo dessa estrutura. Por esse motivo quando executamos o código diretamente no arquivo ele lê todo o conteúdo da estrutura e quando executamos através da importação do arquivo ele não lê o que está na estrutura. Dessa forma o valor atribuído a variável __name__ é diferente de “__main__”! Isso é interessante quando você vai fazer algum teste no seu arquivo principal, mas não quer que ele seja executado em arquivos secundários, então pode colocar alguma função que só funcione no arquivo principal.\n",
+    "\n",
+    "#### Fonte\n",
+    "- https://www.hashtagtreinamentos.com/if-name-main-no-python?gad_source=1&gclid=CjwKCAjw88yxBhBWEiwA7cm6pYljtaawzEmxW4Q79CX7apbBq18j-DNKsNDqM-0OKQvFBbGGaEKp3hoCbBcQAvD_BwE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Importação de pacotes externos\n",
     "---"
    ]
