--- a/Aula_00.ipynb
+++ b/Aula_00.ipynb
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dados do Instrutor:\n",
+    "## Currículo do Instrutor:\n",
     "---"
    ]
   },
@@ -91,9 +91,9 @@
    "source": [
     "- Lógica de programação em Python.\n",
     "- Estruturas de dados.\n",
+    "- Coleções.\n",
     "- Funções.\n",
     "- Pacotes externos.\n",
-    "- Notebooks.\n",
     "- Mini-projetos."
    ]
   },
