Atualizado: arquivo funcoes.py mudado para equacoes.py; Aulas 12 e 13.

--- a/Aula_12.ipynb
+++ b/Aula_12.ipynb
@@ -148,7 +148,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Algumas funções podem retornar um valor para ser usado no algoritmo principal. Isso é muito útil para repassar o valor da função para uma saída de dados ou para uma variável, por exemplo. Uma função pode ou não ter retorno. Em outras linguagens de programação, como o Pascal ou Delphi, chamamos as funções que **não** possuem retorno de **Procedimentos**, ou ***Procedures***.\n",
+    "Algumas funções podem retornar um valor para ser usado no algoritmo principal. Isso é muito útil para repassar o valor da função para uma saída de dados ou para uma variável, por exemplo. Uma função pode ou não ter retorno. Em outras linguagens de programação, como o Pascal ou Delphi, chamamos as funções que **não** possuem retorno de **Procedimentos**, ou ***Procedures***. \n",
+    "\n",
+    "### Return\n",
+    "\n",
+    "O comando `return` é usado em funções regulares para retornar um valor e encerrar a execução da função. Quando o `return` é atingido, ela retorna um valor e para a execução, encerrando a função.\n",
     "\n",
     "No exemplo abaixo, vamos criar uma função que calcula a equação do 1º grau a partir de 2 valores, e retorna o resultado. Veja:"
    ]
@@ -183,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Quando uma função possui um retorno, ela só pode ter um único retorno apenas. A \"exceção\", se é que se pode dizer assim, é quando esse retorno está embutido dentro de uma estrutura de decisão. Sendo assim, a função pode retornar um ou outro valor. Vejamos no exemplo abaixo, onde a função decide se uma pessoa está matriculada em um curso ou não com base na validação da documentação:"
+    "A função só pode ter um único `return` apenas. A \"exceção\", se é que se pode dizer assim, é quando esse retorno está embutido dentro de uma estrutura de decisão. Sendo assim, a função pode retornar um ou outro valor. Vejamos no exemplo abaixo, onde a função decide se uma pessoa está matriculada em um curso ou não com base na validação da documentação:"
    ]
   },
   {
@@ -218,6 +222,96 @@
     "\n",
     "# chama a função\n",
     "print(matricular_aluno(nome, validacao))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Na verdade, há ainda um outro caso em que há uma \"exceção\" sobre a função retornar mais de um valor, mas não é com o comando `return`...\n",
+    "\n",
+    "### Yield\n",
+    "\n",
+    "O comando `yield` é um tipo de retorno de função usado em funções geradoras para retornar valores de forma **iterativa**, sem encerrar a execução da função. A função mantém seu estado entre as chamadas e continua de onde parou quando é chamada novamente, retornando o próximo valor. Para isso, a função é chamada dentro do comando `next()`. Veja abaixo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alex está com a documentação pendente.\n",
+      "Alex está com a documentação em fase de verificação.\n",
+      "Alex está com a documentação aprovada e com a matrícula pendente.\n",
+      "Alex está com a matrícula aprovada e efetivada.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# função\n",
+    "def verificar_matricula(nome):\n",
+    "    yield f'{nome} está com a documentação pendente.'\n",
+    "    yield f'{nome} está com a documentação em fase de verificação.'\n",
+    "    yield f'{nome} está com a documentação aprovada e com a matrícula pendente.'\n",
+    "    yield f'{nome} está com a matrícula aprovada e efetivada.'\n",
+    "\n",
+    "# programa principal\n",
+    "nome = input('Informe o nome do aluno que deseja verificar a situação da matrícula: ')\n",
+    "\n",
+    "# o retorno da função é repassada para uma variável\n",
+    "situacao = verificar_matricula(nome)\n",
+    "\n",
+    "# saída de dados: o mesmo comando vai mostrar 3 saídas diferentes\n",
+    "print(next(situacao))\n",
+    "print(next(situacao))\n",
+    "print(next(situacao))\n",
+    "print(next(situacao))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Outra possibilidade é de exibir o retorno da função em um laço de repetição. Nesse caso, não haveria necessidade do comando `next()`. Veja abaixo o mesmo programa sendo executado com um laço `for`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alex Machado está com a documentação pendente.\n",
+      "Alex Machado está com a documentação em fase de verificação.\n",
+      "Alex Machado está com a documentação aprovada e com a matrícula pendente.\n",
+      "Alex Machado está com a matrícula aprovada e efetivada.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# função\n",
+    "def verificar_matricula(nome):\n",
+    "    yield f'{nome} está com a documentação pendente.'\n",
+    "    yield f'{nome} está com a documentação em fase de verificação.'\n",
+    "    yield f'{nome} está com a documentação aprovada e com a matrícula pendente.'\n",
+    "    yield f'{nome} está com a matrícula aprovada e efetivada.'\n",
+    "\n",
+    "# programa principal\n",
+    "nome = input('Informe o nome do aluno que deseja verificar a situação da matrícula: ')\n",
+    "\n",
+    "# o retorno da função é repassada para uma variável\n",
+    "situacoes = verificar_matricula(nome)\n",
+    "\n",
+    "# saída de dados exibida em um laço for\n",
+    "for situacao in situacoes:\n",
+    "    print(situacao)"
    ]
   },
   {
