--- a/Aula_13.ipynb
+++ b/Aula_13.ipynb
@@ -225,8 +225,8 @@
    "metadata": {},
    "source": [
     "1. Crie uma pasta para o seu projeto. Não se esqueça de criar um ambiente virtual Python, conforme ensinado na aula 04.\n",
-    "2. Dentro dessa pasta, crie um arquivo com a extensão **.py**. Sugestão: **funcoes.py**.\n",
-    "3. No arquivo **funcoes.py**, escreva o código-fonte abaixo:"
+    "2. Dentro dessa pasta, crie um arquivo com a extensão **.py**. Sugestão: **equacoes.py**.\n",
+    "3. No arquivo **equacoes.py**, escreva o código-fonte abaixo:"
    ]
   },
   {
@@ -243,30 +243,18 @@
     "    x = -b/a\n",
     "    return x\n",
     "\n",
-    "# função que calcula delta\n",
-    "def calcular_delta(a, b, c):\n",
-    "    delta = b**2 - (4*a*c)\n",
-    "    return delta\n",
-    "\n",
-    "# função que calcula x'\n",
-    "def calcular_x_linha(a, b, c):\n",
-    "    x = (-b + math.sqrt(calcular_delta(a, b, c)))/(2*a)\n",
-    "    return x\n",
-    "\n",
-    "# função que calcula x\"\n",
-    "def calcular_x_2_linha(a, b, c):\n",
-    "    x = (-b - math.sqrt(calcular_delta(a, b, c)))/(2*a)\n",
-    "    return x\n",
-    "\n",
     "# função que calcula equação do 2º grau\n",
     "def calcular_2_grau(a, b, c):\n",
-    "    delta = calcular_delta(a, b, c)\n",
+    "    delta = b**2 - (4*a*c)\n",
     "\n",
     "    if delta > 0:\n",
-    "        return f'x linha = {calcular_x_linha(a, b, c)}. x 2 linha = {calcular_x_2_linha(a, b, c)}.'\n",
+    "        x1 = (-b + math.sqrt(delta))/(2*a)\n",
+    "        x2 = (-b - math.sqrt(delta))/(2*a)\n",
+    "        yield f'x1 = {x1}'\n",
+    "        yield f'x2 = {x2}'\n",
     "    elif delta == 0:\n",
     "        x = -b/(2*a)\n",
-    "        return x\n",
+    "        return f'x = {x}'\n",
     "    else:\n",
     "        return 'A equação não possui uma solução real.'"
    ]
@@ -276,7 +264,7 @@
    "metadata": {},
    "source": [
     "4. Esse arquivo irá reunir todas as funções que precisaremos. Agora, na mesma pasta, criaremos outro arquivo **.py**. Vamos chamá-lo de **main.py**.\n",
-    "5. Nesse novo arquivo **main.py**, iremos importar o arquivo **funcoes.py** através do comando `import funcoes` para fazer o cálculo da equação do 1º grau. Para chamar a função, é necessário chamar o nome do arquivo antes do nome da função, dessa forma `funcoes.calcular_1_grau(a, b)`. Veja abaixo:"
+    "5. Nesse novo arquivo **main.py**, iremos importar o arquivo **equacoes.py** através do comando `import equacoes` para fazer o cálculo da equação do 1º grau. Para chamar a função, é necessário chamar o nome do arquivo antes do nome da função, dessa forma `equacoes.calcular_1_grau(a, b)`. Veja abaixo:"
    ]
   },
   {
@@ -294,20 +282,20 @@
    ],
    "source": [
     "# importa o arquivo de funções\n",
-    "import funcoes\n",
+    "import equacoes\n",
     "\n",
     "# programa principal\n",
     "a = 14\n",
     "b = -2\n",
     "\n",
-    "print(f'Equação do 1º grau: {funcoes.calcular_1_grau(a, b)}')"
+    "print(f'Equação do 1º grau: {equacoes.calcular_1_grau(a, b)}')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. No exemplo acima, estamos importando todo o arquivo desnecesssariamente, pois estamos utilizando apenas a função que calcula a equação do 1º grau. Podemos importar apenas a função que vamos usar, trocando o `import`por `from funcoes import calcular_1_grau`:"
+    "6. No exemplo acima, estamos importando todo o arquivo desnecesssariamente, pois estamos utilizando apenas a função que calcula a equação do 1º grau. Podemos importar apenas a função que vamos usar, trocando o `import`por `from equacoes import calcular_1_grau`:"
    ]
   },
   {
@@ -324,7 +312,7 @@
     }
    ],
    "source": [
-    "from funcoes import calcular_1_grau\n",
+    "from equacoes import calcular_1_grau\n",
     "\n",
     "a = 2\n",
     "b = 5\n",
@@ -341,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -349,20 +337,23 @@
      "output_type": "stream",
      "text": [
       "Equação do 1º grau: -2.5\n",
-      "Equação do 2º grau: x linha = -1.0.\n",
-      "x 2 linha = -1.5.\n"
+      "Equação do 2º grau: x1 = -1.0\n",
+      "Equação do 2º grau: x2 = -1.5\n"
      ]
     }
    ],
    "source": [
-    "from funcoes import calcular_1_grau, calcular_2_grau\n",
+    "from equacoes import calcular_1_grau, calcular_2_grau\n",
     "\n",
     "a = 2\n",
     "b = 5\n",
     "c = 3\n",
+    "equacao_2_grau = calcular_2_grau(a, b, c)\n",
     "\n",
     "print(f'Equação do 1º grau: {calcular_1_grau(a, b)}')\n",
-    "print(f'Equação do 2º grau: {calcular_2_grau(a, b, c)}')"
+    "\n",
+    "for x in equacao_2_grau:\n",
+    "    print(f'Equação do 2º grau: {x}')"
    ]
   },
   {
