Atualizados: README.md e Aula 00.

--- a/Aula_00.ipynb
+++ b/Aula_00.ipynb
@@ -39,8 +39,8 @@
     "**Instrutor:** Alex Machado Ribeiro <br />\n",
     "**Unidade:** SENAI SIG <br />\n",
     "**Turno:** Noturno <br />\n",
-    "**Início:** 06/05/2024 <br />\n",
-    "**Término:**"
+    "**Início:** 13/05/2024 <br />\n",
+    "**Término:** 19/06/2024"
    ]
   },
   {
