Atualizado: aula 13 e equacoes.

--- a/Aula_13.ipynb
+++ b/Aula_13.ipynb
@@ -239,9 +239,7 @@
     "import math\n",
     "\n",
     "# função que calcula equação do 1º grau\n",
-    "def calcular_1_grau(a, b):\n",
-    "    x = -b/a\n",
-    "    return x\n",
+    "calcular_1_grau = lambda a, b: -b/a\n",
     "\n",
     "# função que calcula equação do 2º grau\n",
     "def calcular_2_grau(a, b, c):\n",
