--- a/Aula_13.ipynb
+++ b/Aula_13.ipynb
@@ -511,6 +511,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Alias\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Alias** (ou apelidos) são nomes que podem substituir o nome dos pacotes, quando estes ficam muito grandes no código. Não é obrigatório, mas facilita na hora de codificar.\n",
+    "\n",
+    "Por exemplo, vamos pegar a biblioteca ***numpy***, utilizada para trabalhar com _arrays_ e _matrizes_, e criar um pequeno código apenas para verificar a versão do numpy instalada. Para isso, iremos importar a biblioteca através do comando `import numpy as np`. Caso essa biblioteca não esteja instalada, podemos instalar através do `pip install numpy`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.26.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "print(np.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como pode observar, essa biblioteca pode ter seu nome trocado nos comandos para facilitar a digitação do comando. Nesse caso, trocamos o nome `numpy` por `np`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Requirements.txt\n",
     "---"
    ]
