--- a/Aula_09.ipynb
+++ b/Aula_09.ipynb
@@ -12,7 +12,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Na aula 05, vimos quee uma variável é um valor que varia e não sabemos qual é. Também vimos que ao declarar essa variável, o computador reserva um pedaço da memória RAM para armazenar esse valor. Agora, vamos descobrir que podemos armazenar mais de um valor em uma única variável. Nas outras linguagens de programação, chamamos de _arrays_. Em Python, chamamos de **Coleções**. Há 3 tipos de coleções em Python: **lista**, **tupla** e **dicionário**. É justamente nesse ponto onde o Python se encontra tão mais forte e poderoso em relação à otras linguagens de programação.\n",
+    "Na aula 05, vimos quee uma variável é um valor que varia e não sabemos qual é. Também vimos que ao declarar essa variável, o computador reserva um pedaço da memória RAM para armazenar esse valor. Agora, vamos descobrir que podemos armazenar mais de um valor em uma única variável. As coleções são muito parecidas com o que nas outras linguagens chamamos de _arrays_. Há 3 tipos de coleções em Python: **lista**, **tupla** e **dicionário**. É justamente nesse ponto onde o Python se encontra tão mais forte e poderoso em relação à otras linguagens de programação.\n",
+    "\n",
+    "**Obs:** para os que já conhecem os _arrays_ das outras linguagens, há uma importante diferença para as listas: diferentemente dos _arrays_, uma lista pode conter dados de diferentes tipos.\n",
     "\n",
     "## Lista\n",
     "---"
@@ -145,6 +147,39 @@
     "# percorrendo a lista com um contador\n",
     "for i in range(len(nomes_lista)):\n",
     "    print(f'{i + 1}º nome da lista: {nomes_lista[i]}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Diferentes tipos de dados em uma única lista\n",
+    "\n",
+    "Como dito anteriormente, é possível armazenar dados de diferentes tipos em uma única lista. No exemplo abaixo, estamos armazenando na mesma lista: _strings_, _ints_ e _floats_."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alex <class 'str'>\n",
+      "39 <class 'int'>\n",
+      "1.72 <class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# lista com diferentes tipos de dados\n",
+    "lista_dados = ['Alex', 39, 1.72]\n",
+    "\n",
+    "# exibindo os dados da lista na tela e seus respectivos tipos\n",
+    "for dado in lista_dados:\n",
+    "    print(dado, type(dado))"
    ]
   },
   {
