--- a/Aula_13.ipynb
+++ b/Aula_13.ipynb
@@ -538,8 +538,10 @@
     }
    ],
    "source": [
+    "# importando uma biblioteca e atribuindo a ela um apelido\n",
     "import numpy as np\n",
     "\n",
+    "# chamando o comando da biblioteca pelo apelido\n",
     "print(np.__version__)"
    ]
   },
