--- a/Aula_14.ipynb
+++ b/Aula_14.ipynb
@@ -59,7 +59,60 @@
    "source": [
     "Se tudo der certo, o seu computador irá, sozinho, abrir o menu iniciar, digitar na barra de pesquisa **edge** (nome do navegador da Microsoft), e abrí-lo.\n",
     "\n",
-    "#### **Meus parabéns!!! Você criou sua primeira automação!**"
+    "#### **Meus parabéns!!! Você criou sua primeira automação!**\n",
+    "\n",
+    "A biblioteca **pyautogui** é bem completa e cheia de vários comandos. É importante dedicar um tempo para estudar a documentação dela. Vamos aproveitar a oportunidade para criarmos um programa para automatizar o commit e o push de um repositório para o **GitHub**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Pré-requisitos:** o projeto já tem que ter um primeiro _commit_ no repositório local e um _commit_ no repositório remoto. Fora isso, o programa pode ser executado para qualquer projeto. Outro pré-requisito é que o projeto em questão tenha sido o último a ser aberto no **VSCode**.\n",
+    "\n",
+    "Crie um arquivo **.py** com o código-fonte abaixo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# importa bibliotecas\n",
+    "import pyautogui\n",
+    "import time\n",
+    "\n",
+    "# tempo que cada comando demora para executar\n",
+    "pyautogui.PAUSE = 1\n",
+    "\n",
+    "# instruções\n",
+    "pyautogui.press('win')\n",
+    "pyautogui.write('vscode')\n",
+    "pyautogui.press('enter')\n",
+    "\n",
+    "# espera 10 segundos para abrir o vscode e continuar com os comandos\n",
+    "time.sleep(10)\n",
+    "\n",
+    "# continua as instruções\n",
+    "pyautogui.hotkey('ctrl', 'shift', \"'\")\n",
+    "pyautogui.write('git add .')\n",
+    "pyautogui.press('enter')\n",
+    "pyautogui.write('git commit -m \"Repositório atualizado por automação.\"')\n",
+    "\n",
+    "# espera 5 segundos para dar tempo de fazer o commit\n",
+    "time.sleep(5)\n",
+    "\n",
+    "# continua as instruções\n",
+    "pyautogui.press('enter')\n",
+    "pyautogui.write('git push')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Após termminar, salve e execute o seu código, e veja no seu GitHub se o seu projeto subiu corretamente no repositório."
    ]
   }
  ],
