--- a/Aula_15.ipynb
+++ b/Aula_15.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Notebooks - Jupyter Notebook, Jupyter Lab e Colaboratory\n",
+    "## Notebooks - Jupyter Notebook, Jupyter Lab e Google Colaboratory\n",
     "---"
    ]
   },
@@ -140,6 +140,33 @@
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Células do notebook\n",
+    "\n",
+    "Um arquivo do tipo notebook é dividido em células. Cada célula contém um tipo de conteúdo, e podem ser de dois tipos: ***Markdown*** e ***Código***.\n",
+    "\n",
+    "#### Markdown\n",
+    "\n",
+    "Uma célula do tipo ***Markdown*** é uma célula que contém conteúdos do tipo texto e/ou imagens. A formatação do texto é feita usando alguns símbolos, por exemplo:\n",
+    "\n",
+    "- `#`: título. Os níveis dos títulos mudam de acordo com a quantidade de `#` aplicados em uma linha.\n",
+    "- `-`: marcador de tópico.\n",
+    "- `---`: linha divisória.\n",
+    "- `_texto_`: _underscore_ aplica estilo itálico quando aplicado no início e fim do texto.\n",
+    "- `**texto**`: dois asterísticos no início e no fim do texto deixam em negrito.\n",
+    "- `***texto***`: três asterísticos no início e fim de um texto aplicam negrito e itálico ao mesmo tempo.\n",
+    "- Acento de crase no início e fim do texto: indicam um texto que simboliza um código-fonte.\n",
+    "\n",
+    "As células _markdown_ também aceitam códigos _html_, o que permite uma estilização parecida com a das páginas web.\n",
+    "\n",
+    "#### Código\n",
+    "\n",
+    "Células do tipo _código_ são utilizadas para escrever um código-fonte a ser executado dentro do próprio notebook. Essa é uma das principais vantagens de se usar um notebook como este. A célula exibe um código-fonte identico aos dos arquivos **.py**, e são acompanhadas por um botão de executar do lado. Ao clicar no botão, o código-fonte é executado diretamente da célula, exibindo a saída de dados logo abaixo, o que é excelente para a exibição de relatórios de análsie de dados feita por Python."
    ]
   }
  ],
