--- a/Aula_10.ipynb
+++ b/Aula_10.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Aula 10 - Coleções: Tupla**\n",
+    "# **Aula 10 - Coleções Parte 2: Tupla**\n",
     "---"
    ]
   },
