--- a/Aula_11.ipynb
+++ b/Aula_11.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Aula 11 - Coleções: Dicionário**\n",
+    "# **Aula 11 - Coleções Parte 3: Dicionário**\n",
     "---"
    ]
   },
