--- a/Aula_15.ipynb
+++ b/Aula_15.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Aula 15 - Mineração e análise de dados**\n",
+    "# **Aula 15 - Análise de dados Parte 1: Notebooks**\n",
     "---"
    ]
   },
@@ -44,7 +44,7 @@
     "\n",
     "#### Há 3 formas de usar o Jupyter Notebook:\n",
     "\n",
-    "- Através do ***Anaconda Navigator***, um software gratuíto que funciona como um pacote de aplicações voltadas para ciência de dados, que instala, entre outros programas, o Python e o Jupyter Notebook. Ao executar o Jupyter Notebook, ele irá abrir no navegador padrão.\n",
+    "- Através do ***Anaconda Navigator***: um software gratuíto que funciona como um pacote de aplicações voltadas para ciência de dados, que instala, entre outros programas, o Python e o Jupyter Notebook. Ao executar o Jupyter Notebook, ele irá abrir no navegador padrão.\n",
     "- Através do **CLI**: escolher uma pasta onde irá rodar o Jupyter Notebook, abrir o terminal nessa pasta, e executar o comando `pip install notebook` (ele irá instalar o Jupyter especificamente em uma pasta). Para abrir o Jupyter Notebook, basta abrir novamente o terminal e executar o comando `jupyter notebook`, e o programa irá abrir no navegador padrão da máquina do usuário.\n",
     "- Através do ***Visual Studio Code***: abrir o painel de extensões do _VSCode_, procurar pela extensão **Jupyter** e instalar. Isso fará com que os notebooks rodem diretamente do VSCode, sem a necessidade de abrir o Jupyter Notebook no navegador.\n",
     "\n",
