--- a/Aula_15.ipynb
+++ b/Aula_15.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Aula 15 - Análise de dados Parte 1: Notebooks**\n",
+    "# **Aula 15 - Ciência de dados Parte 1: Notebooks**\n",
     "---"
    ]
   },
@@ -166,7 +166,11 @@
     "\n",
     "#### Código\n",
     "\n",
-    "Células do tipo _código_ são utilizadas para escrever um código-fonte a ser executado dentro do próprio notebook. Essa é uma das principais vantagens de se usar um notebook como este. A célula exibe um código-fonte identico aos dos arquivos **.py**, e são acompanhadas por um botão de executar do lado. Ao clicar no botão, o código-fonte é executado diretamente da célula, exibindo a saída de dados logo abaixo, o que é excelente para a exibição de relatórios de análsie de dados feita por Python."
+    "Células do tipo _código_ são utilizadas para escrever um código-fonte a ser executado dentro do próprio notebook. Essa é uma das principais vantagens de se usar um notebook como este. A célula exibe um código-fonte identico aos dos arquivos **.py**, e são acompanhadas por um botão de executar do lado. Ao clicar no botão, o código-fonte é executado diretamente da célula, exibindo a saída de dados logo abaixo, o que é excelente para a exibição de relatórios de análsie de dados feita por Python.\n",
+    "\n",
+    "##### Um pequeno detalhe sobre as células de código do Notebook...\n",
+    "\n",
+    "Os códigos de um notebook são executados em sequência, e não de forma isolada em cada célula. Ou seja, o valor atribuído a uma variável em uma celula permanece o mesmo caso essa mesma variável seja chamada em outra célula. Com isso, o código não precisa ser repetido caso precise ser retomado mais para frente. Esse detalhe deverá ser levado em conta a partir do próximo notebook/aula."
    ]
   }
  ],
