--- a/Aula_16.ipynb
+++ b/Aula_16.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Aula 16 - Ciência de dados Parte 2: Pandas**\n",
+    "# **Aula 16 - Mineração de dados Parte 2: Pandas**\n",
     "---"
    ]
   },
