--- a/Aula_17.ipynb
+++ b/Aula_17.ipynb
@@ -84,7 +84,15 @@
    "source": [
     "#### Criando novo repositório local\n",
     "\n",
-    "Com o terminal aberto (tanto faz se for powershell ou git bash), digite o comando `git init`, e aperte **Enter**. Isso irá criar uma pasta oculta na raiz do seu projeto chamada **.git**."
+    "Com o terminal aberto (tanto faz se for powershell ou git bash), digite o comando `git init`, e aperte **Enter**. Isso irá criar uma pasta oculta na raiz do seu projeto chamada **.git**.\n",
+    "\n",
+    "#### Inserindo as credenciais\n",
+    "\n",
+    "Inserindo suas credenciais, seus repositórios terão a identificação de quem está fazendo os _commits_.\n",
+    "\n",
+    "- Para inserir suas credenciais no git, execute o comando `git config --global user.name \"nome_de_usuario\"` e aperte **Enter**, e depois execute o comando `git config --global user.email \"usuario@servidor.com\"` e finalize com **Enter**.\n",
+    "- Para conferir se as credenciais foram inseridas corretamente, execute o comando `git config --list` e aperte **Enter**, e depois procure na lista pelo seu nome de usuário e e-mail.\n",
+    "- Caso queira retirar as suas credenciais do computador, execute o comando `git config --global unset user.name`, aperte **Enter**, e depois execute o comando `git config --global unset user.email`, e termine com **Enter**."
    ]
   }
  ],
