--- a/Aula_17.ipynb
+++ b/Aula_17.ipynb
@@ -92,7 +92,29 @@
     "\n",
     "- Para inserir suas credenciais no git, execute o comando `git config --global user.name \"nome_de_usuario\"` e aperte **Enter**, e depois execute o comando `git config --global user.email \"usuario@servidor.com\"` e finalize com **Enter**.\n",
     "- Para conferir se as credenciais foram inseridas corretamente, execute o comando `git config --list` e aperte **Enter**, e depois procure na lista pelo seu nome de usuário e e-mail.\n",
-    "- Caso queira retirar as suas credenciais do computador, execute o comando `git config --global unset user.name`, aperte **Enter**, e depois execute o comando `git config --global unset user.email`, e termine com **Enter**."
+    "- Caso queira retirar as suas credenciais do computador, execute o comando `git config --global unset user.name`, aperte **Enter**, e depois execute o comando `git config --global unset user.email`, e termine com **Enter**.\n",
+    "\n",
+    "#### Preparando os arquivos\n",
+    "\n",
+    "- Para indicar quais arquivos deseja incluir no próximo _commit_, basta executar o comando `git add [nome do arquivo]`. Chamamos isso de **\"adicionar ao _stage_\"**.\n",
+    "- Caso deseje adicionar **todos os arquivos** do seu projeto, execute o comando `git add .` (o ponto final separado da palavra add).\n",
+    "\n",
+    "#### Commit\n",
+    "\n",
+    "O ***commit*** é basicamente gerar uma versão do seu código-fonte, ou seja, \"congelar\" o estado atual do seu código-fonte para, caso precise, ser recuperado posteriormente.\n",
+    "\n",
+    "- Para gerar um novo ***commit***, execute o comando `git commit -m \"Mensagem do commit\"`.\n",
+    "\n",
+    "#### Reset\n",
+    "\n",
+    "- **Se arrependeu de adicionar os arquivos ao _stage_?** Execute o comando `git reset HEAD` para voltar ao estado do último _commit_, ou para o estágio anterior a do comando _add_.\n",
+    "- **Fez o _commit_ e se arrependeu?** Execute o comando `git reset HEAD~1` para voltar ao _commit_ anterior, onde `1` corresponde ao número de _commits_ que deseja voltar. Exemplo: precisa voltar 3 _commits_ anteriores? `git reset HEAD~3`.\n",
+    "\n",
+    "#### Gitignore\n",
+    "\n",
+    "O ***gitignore*** é um arquivo de texto criado para listar os arquivos que o desenvolvedor deseja não incluir nos _commits_. Portanto, caso deseje incluir o máximo de arquivos possíveis em um _commit_, mas deseja deixar um ou outro de fora, ou até mesmo uma pasta de fora, é mais produtivo criar um _gitignore_ e colocar o nome do arquivo dentro dele. Assim, você poderá executar o comando `git add .` normalmente que os arquivos listados dentro do gitignore não irão para o _stage_, e consequentemente não irão para o _commit_.\n",
+    "\n",
+    "- Para criar o _gitignore_, crie um novo arquivo na raiz do projeto com o nome `.gitignore` (exatamente esse nome, sem escrver nada antes do ponto), e digite dentro dele o nome do arquivo/pasta que deseja deixar de fora do _commit_. Salve e é só fazer o _commit_."
    ]
   }
  ],
